# My_GStreamer_demo

./: CMakeLists.txt  FindCerberoGStreamer.cmake  GStreamer_HTML_demo.html  README.md  create_and_build.sh
include/: AVStream.h  utility.h
src/: AVStream.cpp  ogg_client.cpp  utility.cpp  visualizer_server.cpp
